# unkey

./: .dockerignore  .gitattributes  .gitignore  .golangci.yaml  .goreleaser.service.yaml  AGENTS.md  Dockerfile  Dockerfile.dockerignore  Dockerfile.release  Makefile  go.mod  go.sum
.amp/workflows/: fix-linear-issue.md
.depot/workflows/: job_bazel.yaml  job_go.yaml  mirror_canary.yaml  pr.yaml  service-release.yaml
.github/workflows/: pullfrog.yml
.mise/: config.toml
.mise/tasks/: build  dashboard  dev  generate  lint  nuke  test  unkey
cmd/dev/: BUILD.bazel  main.go
cmd/dev/slack/: BUILD.bazel  tunnel.go  tunnel_test.go
cmd/dev/tunnel/: BUILD.bazel  tunnel.go  tunnel_test.go
dev/: .tiltignore  Dockerfile  Tiltfile  portal-local-testing.md
docs/engineering/: docs.json
docs/ideation/: 2026-07-01-customer-usage-billing-ideation.html
docs/plans/: 2026-07-01-001-feat-customer-usage-billing-plan.md  2026-07-02-001-feat-monetization-top-level-plan.md  2026-07-03-001-feat-slack-deployment-notifications-plan.md  2026-07-10-framework-detection-contract.md  2026-07-10-pxxl-vercel-product-analysis.md
docs/product/: docs.json
internal/services/billing/: BUILD.bazel  billable_resources.go  resolver.go  resolver_test.go
pkg/auditlog/: actors.go  events.go
pkg/billingperiod/: billingperiod.go  billingperiod_test.go
pkg/blobstore/: memory.go  s3.go  store.go  store_test.go
pkg/cache/: BUILD.bazel  cache.go  cache_test.go  fetch_dedup.go  revalidation.go  swr_test.go  timing_attrs.go
pkg/clickhouse/: BUILD.bazel  active_keys.go  active_keys_test.go  audit_logs.go  billable_identity.go  billable_identity_backfill.go  billable_identity_test.go  billable_source_test.go  billable_usage_test.go  buffer.go  client.go  flush.go  flush_test.go  instance_checkpoints_view_test.go  instance_events_test.go  instance_meter.go  instance_meter_test.go  interface.go  key_verifications_test.go  key_verifications_timeseries.go  key_verifications_timeseries_test.go  noop.go  ratelimits_test.go  select.go
pkg/codes/: constants_gen.go  unkey_data.go
pkg/config/: save_test.go
pkg/db/: BUILD.bazel  app_build_settings_update.sql_generated.go  app_delete_by_id.sql_generated.go  app_delete_by_id_test.go  app_env_var_delete_by_keys.sql_generated.go  app_find_by_project_and_id_or_slug.sql_generated.go  app_find_with_settings.sql_generated.go  app_list_by_project.sql_generated.go  app_runtime_settings_find.sql_generated.go  app_runtime_settings_find_sentinel_config.sql_generated.go  app_runtime_settings_list_by_app.sql_generated.go  app_runtime_settings_upsert_sentinel_config.sql_generated.go  billing_billable_resource_delete.sql_generated.go  billing_billable_resource_upsert.sql_generated.go  billing_billable_resources_list.sql_generated.go  billing_period_rate_card_find.sql_generated.go  billing_period_rate_card_insert.sql_generated.go  billing_period_rate_card_mark_pushed.sql_generated.go  bulk_app_runtime_settings_upsert_sentinel_config.sql_generated.go  bulk_billing_billable_resource_upsert.sql_generated.go  bulk_ingress_route_insert.sql_generated.go  (+96 more)
pkg/mysql/: BUILD.bazel  database.go  doc.go  handle_err_deadlock.go  handle_err_deadlock_test.go  replica.go  search.go  search_test.go  traced_tx.go
pkg/mysql/schema/: app_framework_detections.sql  app_runtime_settings.sql  billing_billable_resources.sql  billing_period_rate_cards.sql  deployment_artifacts.sql  deployment_changes.sql  deployment_manifests.sql  deployment_resources.sql  deployment_targets.sql  deployment_topology.sql  frontline_routes.sql  identities.sql  instances.sql  rate_cards.sql  ratelimit_global_counters.sql  slack_installations.sql  slack_project_connections.sql  slack_project_settings.sql  workspace_billing_settings.sql
pkg/mysql/sqlcomment/: BUILD.bazel  annotate.go  context.go  doc.go  ingress.go  ingress_test.go  static.go
pkg/ratecard/: BUILD.bazel  ratecard.go  ratecard_test.go
svc/api/internal/deployment/: BUILD.bazel  mapper.go  preflight.go
svc/api/internal/identityattr/: BUILD.bazel  identityattr.go
svc/api/internal/pagination/: BUILD.bazel  pagination.go  pagination_test.go
svc/api/internal/portalscope/: BUILD.bazel  portalscope.go
svc/api/internal/stripeconnect/: BUILD.bazel  verifier.go
svc/api/routes/v2_billing_get_invoice_draft/: 200_test.go  BUILD.bazel  handler.go
svc/api/routes/v2_billing_get_usage/: 200_test.go  BUILD.bazel  handler.go
svc/api/routes/v2_billing_link_stripe_connect/: 200_test.go  BUILD.bazel  handler.go
svc/api/routes/v2_billing_list_plans/: 200_test.go  BUILD.bazel  handler.go
svc/api/routes/v2_billing_select_plan/: 200_test.go  BUILD.bazel  handler.go
svc/api/routes/v2_billing_unlink_stripe_connect/: BUILD.bazel  handler.go
svc/api/routes/v2_deployments_stop_deployment/: 202_test.go  400_test.go  401_test.go  404_test.go  412_test.go  BUILD.bazel  handler.go  helpers_test.go
svc/api/routes/v2_portal_create_key/: 200_test.go  BUILD.bazel  handler.go
svc/api/routes/v2_portal_delete_key/: 200_test.go  BUILD.bazel  handler.go
svc/api/routes/v2_portal_get_verifications/: 200_test.go  400_test.go  BUILD.bazel  handler.go
svc/api/routes/v2_portal_list_keys/: 200_test.go  BUILD.bazel  handler.go
svc/api/routes/v2_portal_reroll_key/: 200_test.go  BUILD.bazel  handler.go
svc/ctrl/internal/enduserbilling/: BUILD.bazel  interface.go  interface_test.go  noop.go  stripeconnect.go  stripeconnect_test.go
svc/ctrl/internal/slack/: BUILD.bazel  webapi.go  webapi_test.go  webhook.go
svc/ctrl/worker/cron/enduserbillingpush/: BUILD.bazel  periodclose.go  periodclose_test.go  vault.go
svc/ctrl/worker/deployment/: BUILD.bazel  deployment_state.go  deployment_state_integration_test.go  doc.go
svc/ctrl/worker/slackstatus/: BUILD.bazel  handlers.go  message.go  message_test.go  resolve_integration_test.go  service.go
svc/frontline/internal/router/: BUILD.bazel  interface.go  lookup.go  lookup_test.go  metrics.go  route_cache_watcher.go  route_cache_watcher_test.go  routing.go  routing_test.go  service.go
web/: pnpm-lock.yaml  pnpm-workspace.yaml
(+1424 files in other folders)
