load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "deployment",
    srcs = [
        "mapper.go",
        "preflight.go",
    ],
    importpath = "github.com/unkeyed/unkey/svc/api/internal/deployment",
    visibility = ["//svc/api:__subpackages__"],
    deps = [
        "//pkg/codes",
        "//pkg/db",
        "//pkg/fault",
        "//pkg/ptr",
        "//svc/api/internal/ctrlclient",
        "//svc/api/openapi",
        "@com_connectrpc_connect//:connect",
    ],
)
