load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pagination",
    srcs = ["pagination.go"],
    importpath = "github.com/unkeyed/unkey/svc/api/internal/pagination",
    visibility = ["//svc/api:__subpackages__"],
    deps = [
        "//pkg/ptr",
        "//svc/api/openapi",
    ],
)

go_test(
    name = "pagination_test",
    srcs = ["pagination_test.go"],
    embed = [":pagination"],
    deps = [
        "//pkg/ptr",
        "@com_github_stretchr_testify//require",
    ],
)
