load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "portalscope",
    srcs = ["portalscope.go"],
    importpath = "github.com/unkeyed/unkey/svc/api/internal/portalscope",
    visibility = ["//svc/api:__subpackages__"],
    deps = [
        "//pkg/auth/principal",
        "//pkg/codes",
        "//pkg/fault",
        "//pkg/zen",
    ],
)
