load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "v2_billing_get_invoice_draft",
    srcs = ["handler.go"],
    importpath = "github.com/unkeyed/unkey/svc/api/routes/v2_billing_get_invoice_draft",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/services/billing",
        "//pkg/clickhouse",
        "//pkg/codes",
        "//pkg/fault",
        "//pkg/ptr",
        "//pkg/ratecard",
        "//pkg/rbac",
        "//pkg/zen",
        "//svc/api/openapi",
    ],
)

go_test(
    name = "v2_billing_get_invoice_draft_test",
    srcs = ["200_test.go"],
    deps = [
        ":v2_billing_get_invoice_draft",
        "//internal/services/billing",
        "//pkg/clickhouse/schema",
        "//pkg/db",
        "//pkg/ratecard",
        "//pkg/uid",
        "//svc/api/internal/testutil",
        "//svc/api/internal/testutil/seed",
        "@com_github_stretchr_testify//require",
    ],
)
