load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "v2_billing_link_stripe_connect",
    srcs = ["handler.go"],
    importpath = "github.com/unkeyed/unkey/svc/api/routes/v2_billing_link_stripe_connect",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/proto/vault/v1:vault",
        "//gen/rpc/vault",
        "//pkg/codes",
        "//pkg/db",
        "//pkg/fault",
        "//pkg/rbac",
        "//pkg/uid",
        "//pkg/zen",
        "//svc/api/internal/stripeconnect",
        "//svc/api/openapi",
    ],
)

go_test(
    name = "v2_billing_link_stripe_connect_test",
    srcs = ["200_test.go"],
    deps = [
        ":v2_billing_link_stripe_connect",
        "//pkg/db",
        "//pkg/fault",
        "//svc/api/internal/testutil",
        "//svc/api/routes/v2_billing_unlink_stripe_connect",
        "@com_github_stretchr_testify//require",
    ],
)
