load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "v2_billing_select_plan",
    srcs = ["handler.go"],
    importpath = "github.com/unkeyed/unkey/svc/api/routes/v2_billing_select_plan",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/codes",
        "//pkg/db",
        "//pkg/fault",
        "//pkg/rbac",
        "//pkg/zen",
        "//svc/api/openapi",
    ],
)

go_test(
    name = "v2_billing_select_plan_test",
    srcs = ["200_test.go"],
    deps = [
        ":v2_billing_select_plan",
        "//pkg/db",
        "//pkg/ratecard",
        "//pkg/uid",
        "//svc/api/internal/testutil",
        "//svc/api/internal/testutil/seed",
        "@com_github_stretchr_testify//require",
    ],
)
