load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "v2_billing_unlink_stripe_connect",
    srcs = ["handler.go"],
    importpath = "github.com/unkeyed/unkey/svc/api/routes/v2_billing_unlink_stripe_connect",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/codes",
        "//pkg/db",
        "//pkg/fault",
        "//pkg/rbac",
        "//pkg/zen",
        "//svc/api/openapi",
    ],
)
