load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "v2_deployments_stop_deployment",
    srcs = ["handler.go"],
    importpath = "github.com/unkeyed/unkey/svc/api/routes/v2_deployments_stop_deployment",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/proto/ctrl/v1:ctrl",
        "//gen/rpc/ctrl",
        "//pkg/codes",
        "//pkg/db",
        "//pkg/fault",
        "//pkg/rbac",
        "//pkg/zen",
        "//svc/api/internal/deployment",
        "//svc/api/openapi",
    ],
)

go_test(
    name = "v2_deployments_stop_deployment_test",
    srcs = [
        "202_test.go",
        "400_test.go",
        "401_test.go",
        "404_test.go",
        "412_test.go",
        "helpers_test.go",
    ],
    deps = [
        ":v2_deployments_stop_deployment",
        "//gen/proto/ctrl/v1:ctrl",
        "//pkg/db",
        "//pkg/uid",
        "//svc/api/internal/testutil",
        "//svc/api/internal/testutil/seed",
        "//svc/api/openapi",
        "@com_connectrpc_connect//:connect",
        "@com_github_stretchr_testify//require",
    ],
)
