load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "v2_portal_list_keys",
    srcs = ["handler.go"],
    importpath = "github.com/unkeyed/unkey/svc/api/routes/v2_portal_list_keys",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/zen",
        "//svc/api/internal/portalscope",
        "//svc/api/routes/v2_apis_list_keys",
    ],
)
