load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "v2_portal_list_keys",
    srcs = ["handler.go"],
    importpath = "github.com/unkeyed/unkey/svc/api/routes/v2_portal_list_keys",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/zen",
        "//svc/api/internal/portalscope",
        "//svc/api/routes/v2_apis_list_keys",
    ],
)

go_test(
    name = "v2_portal_list_keys_test",
    srcs = ["200_test.go"],
    deps = [
        ":v2_portal_list_keys",
        "//pkg/db",
        "//pkg/ptr",
        "//pkg/uid",
        "//svc/api/internal/testutil",
        "//svc/api/internal/testutil/seed",
        "//svc/api/routes/v2_apis_list_keys",
        "@com_github_stretchr_testify//require",
    ],
)
