load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "v2_portal_reroll_key",
    srcs = ["handler.go"],
    importpath = "github.com/unkeyed/unkey/svc/api/routes/v2_portal_reroll_key",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/zen",
        "//svc/api/internal/portalscope",
        "//svc/api/routes/v2_keys_reroll_key",
    ],
)

go_test(
    name = "v2_portal_reroll_key_test",
    srcs = ["200_test.go"],
    deps = [
        ":v2_portal_reroll_key",
        "//pkg/db",
        "//pkg/ptr",
        "//svc/api/internal/testutil",
        "//svc/api/internal/testutil/seed",
        "//svc/api/routes/v2_keys_reroll_key",
        "@com_github_stretchr_testify//require",
    ],
)
