load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "enduserbilling",
    srcs = [
        "interface.go",
        "noop.go",
    ],
    importpath = "github.com/unkeyed/unkey/svc/ctrl/internal/enduserbilling",
    visibility = ["//svc/ctrl:__subpackages__"],
)

go_test(
    name = "enduserbilling_test",
    srcs = ["interface_test.go"],
    embed = [":enduserbilling"],
    deps = ["@com_github_stretchr_testify//require"],
)
