load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "deployment",
    srcs = [
        "clear_scheduled.go",
        "deployment_state.go",
        "doc.go",
        "service.go",
    ],
    importpath = "github.com/unkeyed/unkey/svc/ctrl/worker/deployment",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/proto/hydra/v1:hydra",
        "//svc/ctrl/internal/db",
        "@com_github_restatedev_sdk_go//:sdk-go",
    ],
)

go_test(
    name = "deployment_test",
    srcs = ["deployment_state_integration_test.go"],
    deps = [
        "//gen/proto/hydra/v1:hydra",
        "//pkg/uid",
        "//svc/ctrl/integration/harness",
        "//svc/ctrl/integration/seed",
        "//svc/ctrl/internal/db",
        "@com_github_stretchr_testify//require",
    ],
)
