load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "router",
    srcs = [
        "doc.go",
        "interface.go",
        "lookup.go",
        "metrics.go",
        "routing.go",
        "service.go",
    ],
    importpath = "github.com/unkeyed/unkey/svc/frontline/internal/router",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/proto/frontline/v1:frontline",
        "//internal/services/caches",
        "//pkg/cache",
        "//pkg/codes",
        "//pkg/fault",
        "//pkg/mysql",
        "//pkg/prometheus/lazy",
        "//svc/frontline/internal/caches",
        "//svc/frontline/internal/db",
        "//svc/frontline/internal/policies",
        "@com_github_prometheus_client_golang//prometheus",
    ],
)

go_test(
    name = "router_test",
    srcs = ["lookup_test.go"],
    embed = [":router"],
    deps = [
        "//pkg/cache",
        "//pkg/clock",
        "//svc/frontline/internal/caches",
        "//svc/frontline/internal/db",
        "@com_github_stretchr_testify//require",
    ],
)
